unify snippet context menu structure with the rest of the app fix layout shifts for tabs when the first tab becomes active/inactive refs: #809

--- a/pgmanage/app/static/pgmanage_frontend/src/assets/scss/themes/light.scss
+++ b/pgmanage/app/static/pgmanage_frontend/src/assets/scss/themes/light.scss
@@ -178,7 +178,7 @@ SOFTWARE.
       }
 
       &:first-of-type.active {
-        border-left: transparent;
+        border-left-color: transparent;
         border-radius: 0 4px 0 0;
       }
 
